--- a/index.html
+++ b/index.html
@@ -141,19 +141,29 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1>Books</h1>
         </div>
     </aside>
      <!-- Callout -->
-    <aside class="callout">
+    <a>
+    <aside class="callout callout-games">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <a href="#"
+    class="snipcart-add-item"
+    data-item-id="2"
+    data-item-name="Bacon"
+    data-item-price="3.00"
+    data-item-weight="20"
+    data-item-url="http://myapp.com/products/bacon"
+    data-item-description="Some fresh bacon">
+        <h1>Games &amp; Electronics</h1>
+</a>
         </div>
     </aside>
      <!-- Callout -->
-    <aside class="callout">
+    <aside class="callout callout-furniture">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1>Furniture</h1>
         </div>
     </aside>
      <!-- Callout -->
@@ -256,7 +266,18 @@
         });
     });
     </script>
+<script
+    src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    type="text/javascript"></script>
 
+<script type="text/javascript"
+    id="snipcart"
+    src="https://cdn.snipcart.com/scripts/snipcart.js"
+    data-api-key="YOUR_API_KEY"></script>
+
+<link id="snipcart-theme" type="text/css"
+    href="https://cdn.snipcart.com/themes/base/snipcart.min.css"
+    rel="stylesheet">
 </body>
 
 </html>
