--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <script type="text/javascript"
     id="snipcart"
     src="https://cdn.snipcart.com/scripts/snipcart.js"
-    data-api-key="YOUR_API_KEY"></script>
+    data-api-key="MTcwN2Y3NTItNjU2Ny00MzY5LTllMjMtOTBjMjVkZGM1Yzdh"></script>
 
 <link id="snipcart-theme" type="text/css"
     href="https://cdn.snipcart.com/themes/base/snipcart.min.css"
