--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
         </div>
     </aside>
      <!-- Callout -->
-    <aside class="callout">
+    <aside class="callout callout-clothing">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1>Clothing</h1>
         </div>
     </aside>
     
