--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
                 <a href="#about" onclick = $("#menu-close").click(); >About us</a>
             </li>
             <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Shopping Cart</a>
+                <a href="#portfolio" onclick = $("#menu-close").click(); ><i class="fa fa-shopping-cart"></i>
+Shopping Cart</a>
+                
             </li>
             <li>
-                <a href="#" class="snipcart-checkout">Click here to checkout</a>
+                <a  href="#" class="snipcart-checkout">Click here to checkout</a>
+                
             </li>
             <div class="snipcart-summary">
     &nbsp; &nbsp; &nbsp; &nbsp;Number of items: <span class="snipcart-total-items"></span>
